# ViSound

./: README.md  WIKI.md  pyproject.toml
sonipy/core/: GUI.py  Sonify.py
src/: AudioTask.py  GUI.py  main.py
visound/: WIKI.md  cli.py
visound/core/: Sonify.py
